# servicepytan

./: .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  DOCUMENTATION_UPDATES.md  HISTORY.rst  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PANDAS_UPGRADE.md  PROJECT_PLAN.md  README.rst  pyproject.toml  recommendations.md  requirements.txt  requirements_dev.txt  servicetitan_api_enhancement_suggestions.md  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: Makefile  api.rst  conf.py  configuration.md  deployment.md  examples.md  index.rst  installation.rst  make.bat  prerequisites.md  reference.md  requirements.txt  servicepytan.auth.rst  servicepytan.dates.rst  servicepytan.reports.rst  servicepytan.requests.rst  servicepytan.summary.rst  troubleshooting.md  usage.rst
docs/source/: conf.py  index.rst  modules.rst  prerequisites.md  reference.md  servicepytan.data.rst  servicepytan.rst  servicepytan.utils.rst
servicepytan/: __init__.py  _dates.py  auth.py  cli.py  data.py  dates.py  reports.py  requests.py  servicepytan.py  summary.py  utils.py
servicepytan/accounting/: __init__.py  invoices.py
servicepytan/crm/: __init__.py  locations.py
servicepytan/jpm/: __init__.py  appointments.py
servicepytan/sales/: __init__.py  estimates.py
servicepytan/settings/: __init__.py  tag_types.py  (+2 more)
tests/: __init__.py  test_auth.py  test_data.py  test_dates.py  test_pandas_integration.py  test_reports.py  test_requests.py  test_servicepytan.py  test_summary.py  test_utils.py
(+2 files in other folders)
